@@ -1,5 +1,12 @@
 2009-09-08  Alan Modra  <amodra@bigpond.net.au>
 
+	* gas/d30v/serial2.l: Adjust position of page break.
+	* gas/lns/lns-common-1-alt.d: Match 2009-04-24 change.
+	* gas/mt/ms1-16-003.d: Correct reloc name.
+	* gas/mt/relocs.d: Elide incorrect file format strings.
+
+2009-09-08  Alan Modra  <amodra@bigpond.net.au>
+
 	* gas/all/gas.exp (do_comment): Don't run on m32c.
 	* gas/all/align.d: Likewise.
 	* gas/all/incbin.d: Likewise.
